# backend-forensic-services

./: .gitignore  README.md  pyproject.toml
.kiro/: .config.kiro  design.md  requirements.md  tasks.md
alembic/: env.py
alembic/versions/: 421d7fb6422a_initial.py
app/: config.py  database.py  errors.py  main.py
app/api/: cases.py  devices.py  evidence.py  exception_handlers.py  health.py  reports.py
app/models/: __init__.py  case.py  chain_of_custody_entry.py  contact_record.py  encryption_key.py  evidence_hash.py  forensic_report.py  media_reference.py  message_record.py  notification_record.py  recovered_media.py
app/schemas/: case.py  chain_of_custody.py  contact.py  device.py  health.py  media.py  message.py  notification.py  requests.py
app/services/: adb_bridge_service.py  apk_downgrade_service.py  decryption_service.py  legal_lock_service.py  media_recovery_service.py  notification_log_service.py  report_generator_service.py
recovered_media/case-001/: voice.opus
tests/: conftest.py  factories.py  strategies.py  test_apk_downgrade_service.py  test_cases_router.py  test_config.py  test_database.py  test_decryption_service.py  test_exception_handlers.py  test_legal_lock_service.py  test_media_recovery_service.py  test_notification_log_service.py  test_report_generator_service.py
