[project]
name = "backend-forensic-services"
version = "0.1.0"
description = "Standalone FastAPI backend for forensic investigation services."
authors = ["Lucas Kgarose <lucas.kgarose@example.com>"]
requires-python = ">=3.11"

[tool.poetry.dependencies]
fastapi = "^0.110"
uvicorn = "^0.29"
sqlalchemy = "^2.0"
alembic = "^1.13"
adb-shell = "^0.4"
pycryptodome = "^3.20"
reportlab = "^4.0"
hypothesis = "^6.0"
pytest = "^8.0"
httpx = "^0.27"
factory-boy = "^3.3"
pytest-asyncio = "^0.23"
pydantic = "^2.6"

[tool.poetry.dev-dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.23"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
